# advent_of_code

./: .gitignore  .gitmodules  Cargo.toml
2021/: Cargo.toml
2021/cpp/: CMakeLists.txt  checkmem.sh  makeday.sh  run.sh
2021/cpp/Day18/: CMakeLists.txt  day_18.cpp
2021/cpp/Day19/: day_19.cpp
2021/cpp/Day20/: day_20.cpp
2021/cpp/Day21/: CMakeLists.txt
2021/cpp/Day25/: CMakeLists.txt
2021/src/: main.rs
2021/src/day_eight/: mod.rs
2021/src/day_fifteen/: mod.rs
2021/src/day_fourteen/: mod.rs
2021/src/day_seven/: mod.rs
2021/src/day_ten/: mod.rs
2021/src/day_twelve/: utils.rs
2023/common/: files.exs
2023/day1/: solution.exs  solution.py
2023/day2/: solution.exs
2023/day3/: solution.exs
2023/practice/: basics.exs
cpp/: .gitignore  CMakeLists.txt  build.sh  checkmem.sh  main.cpp  makeday.sh  run.sh  setday.sh
cpp/Day18/: day_18.cpp
cpp/Day19/: CMakeLists.txt  day_19.cpp
cpp/Day20/: CMakeLists.txt
cpp/Day21/: day_21.cpp
cpp/Day25/: day_25.cpp  day_25.h
python_solutions/day_five/: solution.py
python_solutions/day_four/: solution.py
python_solutions/day_six/: solution.py
python_solutions/day_three/: solution.py
python_solutions/day_twelve/: solution.py
src/: main.rs
src/day_16/: mod.rs
src/day_eleven/: mod.rs
src/day_five/: mod.rs
src/day_fourteen/: mod.rs  step4.txt
src/day_nine/: mod.rs
src/day_one/: mod.rs
src/day_seven/: mod.rs
src/day_six/: mod.rs
src/day_thirteen/: mod.rs
src/day_three/: binary_parser.rs  mod.rs
src/day_twelve/: mod.rs  utils.rs
src/day_two/: mod.rs  position.rs
twentyfour/: Cargo.toml
twentyfour/src/: main.rs
(+6 files in other folders)
